--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ go:
   - 1.5
   - tip
 
+before_install:
+  - go get -u github.com/golang/lint/golint
+
 install:
   - make deps
   - make build
@@ -13,4 +16,6 @@ services:
 
 script:
   - make test
+  - go vet
+  - golint
 
